--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build, Release, and Update Homebrew
 
 on:
   push:
@@ -9,56 +9,80 @@ jobs:
   build:
     name: Build for all targets
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [x86_64-linux, aarch64-linux, x86_64-macos, aarch64-macos]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set up Zig
       uses: goto-bus-stop/setup-zig@v2
       with:
         version: 0.13.0
 
-    - name: Build
+    - name: Build for all targets
       run: |
-        zig build -Dtarget=${{ matrix.target }} -Drelease
-        mkdir -p dist
-        mv zig-out/bin/asciigen dist/asciigen-${{ matrix.target }}
-        cd dist && tar czf asciigen-${{ matrix.target }}.tar.gz asciigen-${{ matrix.target }}
+        zig build -Drelease -Dci=true
 
-    - name: Generate SHA256
+    - name: Prepare release assets
       run: |
-        cd dist
-        sha256sum asciigen-${{ matrix.target }}.tar.gz > asciigen-${{ matrix.target }}.tar.gz.sha256
+        mkdir release_assets
+        cd zig-out/bin
+        for dir in */; do
+          target=${dir%/}
+          tar czf ../../release_assets/asciigen-$target.tar.gz -C $target asciigen
+          sha256sum ../../release_assets/asciigen-$target.tar.gz > ../../release_assets/asciigen-$target.tar.gz.sha256
+        done
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: asciigen-${{ matrix.target }}
-        path: dist/asciigen-${{ matrix.target }}.tar.gz*
+        name: release-assets
+        path: release_assets/*
 
   release:
-      name: Create Release
-      needs: build
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    name: Create Release and Update Homebrew
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: release-assets
+        path: release_assets
 
-      - name: Prepare release assets
-        run: |
-          mkdir release_assets
-          mv asciigen-*/*.tar.gz* release_assets/
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: release_assets/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            release_assets/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Set up Homebrew
+      uses: Homebrew/actions/setup-homebrew@master
+
+    - name: Update Homebrew formula
+      env:
+        HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
+      run: |
+        git clone https://github.com/seatedro/asciigen.git
+        cd asciigen
+
+        # Set up git config
+        git config user.name "GitHub Action"
+        git config user.email "action@github.com"
+
+        # Extract version from tag
+        VERSION=${GITHUB_REF#refs/tags/v}
+
+        # Update formula
+        brew bump-formula-pr --no-browse --no-audit \
+          --version=$VERSION \
+          --no-fork \
+          asciigen
+
+        # Commit and push changes
+        git add asciigen.rb
+        git commit -m "Update asciigen to $VERSION"
+        git push https://$HOMEBREW_GITHUB_API_TOKEN@github.com/seatedro/asciigen.git main
