--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ images/
 # Although this was renamed to .zig-cache, let's leave it here for a few
 # releases to make it less annoying to work with multiple branches.
 zig-cache/
+release_assets/
