--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       matrix:
         include:
+          # arm
           - os: macos-latest
             arch: aarch64
-          - os: macos-latest
+          - os: macos-13
             arch: x86_64
-          - os: ubuntu-latest
-            arch: aarch64
+          # x86
           - os: ubuntu-latest
             arch: x86_64
           - os: windows-latest
@@ -35,11 +35,7 @@ jobs:
         if [ "${{ matrix.os }}" = "windows-latest" ]; then
           zig build -Drelease -Dtarget=${{ matrix.arch }}-windows test
         elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-          if [ "${{ matrix.arch }}" = "aarch64" ]; then
-            zig build -Drelease -Dtarget=${{ matrix.arch }}-linux-gnu test
-          else
-            zig build -Drelease -Dtarget=${{ matrix.arch }}-linux test
-          fi
+          zig build -Drelease -Dtarget=${{ matrix.arch }}-linux test
         elif [ "${{ matrix.os }}" = "macos-latest" ]; then
           zig build -Drelease -Dtarget=${{ matrix.arch }}-macos test
         fi
