--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build for all targets
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -17,6 +17,10 @@ jobs:
       uses: goto-bus-stop/setup-zig@v2
       with:
         version: 0.13.0
+
+    - name: Install FFmpeg
+      run: |
+        brew install ffmpeg
 
     - name: Build for all targets
       run: |
