--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,5 @@
 name: Zig Build and Test
 
-on:
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build-and-test:
@@ -24,11 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: AnimMouse/setup-ffmpeg@v1
 
     - name: Set up Zig
       uses: goto-bus-stop/setup-zig@v2
       with:
         version: 0.13.0
+
 
     - name: Build and Test
       run: |
@@ -36,7 +35,7 @@ jobs:
           zig build -Drelease -Dtarget=${{ matrix.arch }}-windows test
         elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
           zig build -Drelease -Dtarget=${{ matrix.arch }}-linux test
-        elif [ "${{ matrix.os }}" = "macos-latest" ]; then
+        elif [[ "${{ matrix.os }}" == macos* ]]; then
           zig build -Drelease -Dtarget=${{ matrix.arch }}-macos test
         fi
       shell: bash
