--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,7 @@ zig-out/
 /docgen_tmp/
 images/
 **/*.DS_Store
-**/*.png
-**/*.jpg
-**/*.jpeg
+test_output/
 
 # Although this was renamed to .zig-cache, let's leave it here for a few
 # releases to make it less annoying to work with multiple branches.
