--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
+    permissions: "write-all"
     steps:
       - uses: actions/download-artifact@v3
         with:
