--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
 name: Zig Build and Test
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build-and-test:
@@ -20,7 +25,7 @@ jobs:
             arch: x86_64
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: AnimMouse/setup-ffmpeg@v1
 
     - name: Set up Zig
