update workflow names
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Zig Build and Test
+name: test
 
 on:
   push:
@@ -46,7 +46,7 @@ jobs:
       shell: bash
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: test_output-${{ matrix.os }}-${{ matrix.arch }}
         path: test_output/
