--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,9 @@
-name: Zig Build and Test
+name: Test
 
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-test:
@@ -13,6 +17,8 @@ jobs:
             arch: aarch64
           - os: macos-13
             arch: x86_64
+          - os: ubuntu-24.04
+            arch: aarch64
           # x86
           - os: ubuntu-latest
             arch: x86_64
@@ -20,8 +26,7 @@ jobs:
             arch: x86_64
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: AnimMouse/setup-ffmpeg@v1
+    - uses: actions/checkout@v4
 
     - name: Set up Zig
       uses: goto-bus-stop/setup-zig@v2
@@ -29,19 +34,29 @@ jobs:
         version: 0.13.0
 
 
+    - name: Setup FFmpeg (macos)
+      if: runner.os == 'macOS'
+      run: brew install ffmpeg pkgconf coreutils
+
+    - name: Setup FFmpeg (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg libavcodec-dev libavformat-dev libavutil-dev libswscale-dev libswresample-dev pkg-config
+
     - name: Build and Test
       run: |
         if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          zig build -Drelease -Dtarget=${{ matrix.arch }}-windows test
-        elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-          zig build -Drelease -Dtarget=${{ matrix.arch }}-linux test
+          zig build -Doptimize=ReleaseFast -Dtarget=${{ matrix.arch }}-windows test
+        elif [ "${{ matrix.os }}" = "ubuntu*" ]; then
+          zig build -Doptimize=ReleaseFast -Dtarget=${{ matrix.arch }}-linux test
         elif [[ "${{ matrix.os }}" == macos* ]]; then
-          zig build -Drelease -Dtarget=${{ matrix.arch }}-macos test
+          zig build -Doptimize=ReleaseFast -Dtarget=${{ matrix.arch }}-macos test
         fi
       shell: bash
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: test_output-${{ matrix.os }}-${{ matrix.arch }}
         path: test_output/
