--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Setup FFmpeg (Windows)
       if: runner.os == 'Windows'
       run: |
-        choco install ffmpeg-full
+        choco install -y ffmpeg-shared
 
     - name: Test
       run: |
